[JSC][Win] callOperationNoExceptionCheck() also needs to support operations that return SlowPathReturnType https://bugs.webkit.org/show_bug.cgi?id=224964

Reviewed by Yusuke Suzuki.

r229989 (Bug 183655) added the x64 Windows support only for
callOperation(), but for callOperationNoExceptionCheck().
callOperationNoExceptionCheck() also needs the x64 Windows
support.

This change is a preparation for Bug 224920 that is going to use
callOperationNoExceptionCheck instead of callOperation.

* jit/JIT.h:
(callOperation): Rewrote by using 'if constexpr' instead of SFINAE.
(callOperationNoExceptionCheck): Added a new implementation for
x64 Windows based on callOperation.


Canonical link: https://commits.webkit.org/236945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276486 268f45cc-cd09-0410-ab3c-d52691b4dbfc